--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- JQVMap -->
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/jqvmap/jqvmap.min.css">
+    <!-- DataTables -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/plugins/datatables-bs4/css/dataTables.bootstrap4.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="%PUBLIC_URL%/dist/css/adminlte.min.css">
     <!-- overlayScrollbars -->
@@ -73,10 +75,13 @@
     </script>
     <!-- Bootstrap 4 -->
     <script src="%PUBLIC_URL%/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- DataTables -->
+    <script src="%PUBLIC_URL%/plugins/datatables/jquery.dataTables.js"></script>
+    <script src="%PUBLIC_URL%/plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
     <!-- ChartJS -->
     <script src="%PUBLIC_URL%/plugins/chart.js/Chart.min.js"></script>
-    <!-- Sparkline -->
-    <script src="%PUBLIC_URL%/plugins/sparklines/sparkline.js"></script>
+    <!-- Sparkline
+    <script src="%PUBLIC_URL%/plugins/sparklines/sparkline.js"></script>-->
     <!-- JQVMap -->
     <script src="%PUBLIC_URL%/plugins/jqvmap/jquery.vmap.min.js"></script>
     <script src="%PUBLIC_URL%/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
@@ -93,9 +98,9 @@
     <script src="%PUBLIC_URL%/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
     <script src="%PUBLIC_URL%/dist/js/adminlte.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="%PUBLIC_URL%/dist/js/pages/dashboard.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="%PUBLIC_URL%/Sdist/js/demo.js"></script>
+    <script src="%PUBLIC_URL%/dist/js/custom.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes)
+    <script src="%PUBLIC_URL%/dist/js/pages/dashboard.js"></script>-->
+
   </body>
 </html>
